--- a/src/web/index.css
+++ b/src/web/index.css
@@ -5,7 +5,7 @@ html
 
 #pageContent
 {
-	height:90%;
+	/* height:90%; */
 	border: 5px solid rgb(140, 139, 139);
 	/* display: flex; */
 	background-color: aliceblue;
@@ -29,4 +29,34 @@ html
 	height:10%;
 	text-align: center;
 	font-size: 4.5vw;
+}
+
+#nameGrid
+{
+	background-color: pink;
+	display: grid;
+	grid-template-columns: repeat(8, 1fr); 
+	grid-column-gap: 20px;
+}
+#specificAirline
+{
+	background-color: pink;
+	display: grid;
+	grid-template-columns: repeat(8, 1fr); 
+	grid-column-gap: 20px;
+	text-align: center;
+	margin-top: 3vh;
+	margin-left: 1vw;
+	margin-right: 1vw;
+}
+#submitButton
+{
+	width: 9vw;
+	height: 5vh;
+}
+#submitButtonHolder
+{
+	justify-content: center;
+	display:flex;
+	margin-top: 3vh;
 }
