--- a/src/web/index.css
+++ b/src/web/index.css
@@ -13,16 +13,10 @@ html
 
 #dropdownDiv
 {
-	width:100%;
-	height:10%;
+	height:5vh;
 	display:flex;
-	justify-content: center;
+}
 
-}
-#dropdownMenu
-{
-	width:15%;
-}
 
 #pageTitle
 {
@@ -36,15 +30,16 @@ html
 	background-color: pink;
 	display: grid;
 	grid-template-columns: repeat(8, 1fr); 
-	grid-column-gap: 20px;
+	/* gap: 10%; */
 }
 #specificAirline
 {
-	background-color: pink;
+	/* background-color: pink; */
 	display: grid;
-	grid-template-columns: repeat(8, 1fr); 
+	grid-template-columns: repeat(4, 1fr); 
 	grid-column-gap: 20px;
-	text-align: center;
+	grid-row-gap: 10px;
+	/* text-align: center; */
 	margin-top: 3vh;
 	margin-left: 1vw;
 	margin-right: 1vw;
@@ -54,9 +49,43 @@ html
 	width: 9vw;
 	height: 5vh;
 }
-#submitButtonHolder
+
+
+.inputField
 {
-	justify-content: center;
+	width: 12vw;
+	height: 5vh;
+	border-radius: 1vw;
+	font-size: 1.2vw;
+	text-indent: 0.5vw;
+}
+
+.inputHolder
+{
+	display:grid;
+	grid-template-columns: repeat(1, 1fr); 
+	text-align: center;
+	justify-items: center;
+}
+.center
+{
+	grid-template-columns: repeat(2, 1fr); 
+}
+
+#selectionHolder
+{
 	display:flex;
-	margin-top: 3vh;
+	align-items: center;
+	justify-content: center;
+}
+
+#submitButton
+{
+	background: rgb(190, 207, 222);
+	border: 0.5px soldi black;
+}
+#errorHolder
+{
+	text-align: center;
+	color: red;
 }
